--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
                 coming for more services</p>
 
             <div class="button">
-                <button type="button" class="btn btn-danger">Download Resume</button>
+                <button type="button" class="btn btn-danger" href="https://drive.google.com/file/d/1OmLpdS0uH_uPC6nO2l20pv3AHHyu1CSb/view" target="_blank">Download Resume</button>
             </div>
         </div>
     </section>
